# form-data-builder

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
testdata/: text-a.txt  text-b.txt
